test/files/neg/t6162-inheritance.scala
@deprecatedInheritance("`Foo` will be made final in a future version.", "2.10.0")
class Foo

class SubFoo extends Foo